--- a/app/src/main/res/layout/activity_place.xml
+++ b/app/src/main/res/layout/activity_place.xml
@@ -11,12 +11,11 @@
         android:id="@+id/tvNameP"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:text="@string/place_name"
         android:textAlignment="center"
-        android:textColor="#050505"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -24,9 +23,8 @@
         android:id="@+id/tvLocationP"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:text="@string/place_location"
         android:textAlignment="center" />
 
@@ -34,8 +32,8 @@
         android:id="@+id/svImages"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginBottom="0dp"
         tools:ignore="SpeakableTextPresentCheck">
 
@@ -50,30 +48,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="fill_vertical"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             app:cardCornerRadius="1dp"
             app:cardElevation="1dp"
             app:cardPreventCornerOverlap="true"
-            app:cardUseCompatPadding="true"
-            app:contentPadding="3dp">
+            app:cardUseCompatPadding="true">
 
             <RatingBar
                 android:id="@+id/rBar"
                 style="@style/Widget.AppCompat.RatingBar"
                 android:layout_width="wrap_content"
-                android:layout_height="42dp"
-                android:layout_marginStart="95dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="110dp"
                 android:indeterminate="false"
                 android:isIndicator="true"
                 android:numStars="5"
-                android:scaleX=".7"
-                android:scaleY=".7"
+                android:scaleX=".55"
+                android:scaleY=".55"
                 android:stepSize="0.5"
                 android:theme="@style/Widget.AppCompat.RatingBar"
                 android:transformPivotX="0dp"
@@ -87,9 +84,8 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:text="@string/description_label"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -98,27 +94,27 @@
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:text="@string/description" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:text="@string/comments_label"
         android:textSize="16sp"
         android:textStyle="bold" />
 
-    <ListView
-        android:id="@+id/lvComments"
+
+    <WebView
+        android:id="@+id/wvComments"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp" />
 
 </LinearLayout>
