--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fragmentFavorites"
-    tools:context=".presentation.view.FavoritesFragment">
+    android:minWidth="400dp"
+    android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/lvFavorites"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFavorites"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        android:minHeight="600dp">
 
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <ProgressBar
+        android:layout_gravity="center"
+        android:id="@+id/progressBarFav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </FrameLayout>
