--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     tools:context=".presentation.view.HomeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/lvMain"
+        android:id="@+id/rvMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
