--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -66,6 +66,16 @@
         android:theme="@style/Widget.AppCompat.RatingBar"
         tools:ignore="SpeakableTextPresentCheck" />
 
+    <ImageButton
+        android:id="@+id/btnFavorite"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="360dp"
+        android:layout_marginTop="39dp"
+        android:layout_marginEnd="3dp"
+        app:srcCompat="@drawable/ic_favorite_white_24dp"
+        tools:ignore="SpeakableTextPresentCheck" />
+
 </androidx.cardview.widget.CardView>
 
 <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
