--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minWidth="400dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/fragmentFavorites">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvFavorites"
